# Alpha-Repo

./: Cargo.toml
config/: alpha.toml  constitution.toml  models.toml  permissions.toml
crates/alpha-aris/: Cargo.toml
crates/alpha-aris/src/: lib.rs  registry.rs  tests.rs  types.rs
crates/alpha-common/: Cargo.toml
crates/alpha-common/src/: config.rs  error.rs  event.rs  lib.rs  topics.rs  traits.rs  types.rs
crates/alpha-common/src/schemas/: ai_resource.rs  explainability.rs  goal.rs  identity.rs  memory.rs  mod.rs  relationship.rs
crates/alpha-context/: Cargo.toml
crates/alpha-context/src/: assembler.rs  lib.rs  tests.rs  types.rs
crates/alpha-conversation/: Cargo.toml
crates/alpha-conversation/src/: lib.rs  memory_writer.rs  service.rs  tests.rs  types.rs
crates/alpha-core/: Cargo.toml
crates/alpha-core/src/: app.rs  identity.rs  init.rs  main.rs  provider.rs  shutdown.rs  tests.rs
crates/alpha-dialog/: Cargo.toml
crates/alpha-dialog/src/: lib.rs  session.rs  tests.rs  types.rs
crates/alpha-event-bus/: Cargo.toml
crates/alpha-event-bus/src/: lib.rs  matcher.rs  store.rs  subscriber.rs  tests.rs
crates/alpha-explainability/: Cargo.toml
crates/alpha-explainability/src/: lib.rs  store.rs  tests.rs
crates/alpha-knowledge/: Cargo.toml
crates/alpha-knowledge/src/: lib.rs  store.rs  tests.rs  types.rs
crates/alpha-memory/: Cargo.toml
crates/alpha-memory/src/: lib.rs  scoring.rs  search.rs  store.rs  tests.rs
crates/alpha-model-router/: Cargo.toml
crates/alpha-model-router/src/: client.rs  lib.rs  streaming.rs  types.rs
crates/alpha-orb-ui/: Cargo.toml
crates/alpha-orb-ui/src/: ipc.rs  lib.rs  tests.rs  webview.rs  window.rs
crates/alpha-orb-ui/src/assets/: app.js  index.html  style.css
crates/alpha-relationship/: Cargo.toml
crates/alpha-relationship/src/: lib.rs  store.rs  tests.rs
crates/alpha-resource/: Cargo.toml
crates/alpha-resource/src/: lib.rs  tests.rs
crates/alpha-security/: Cargo.toml
crates/alpha-security/src/: audit.rs  lib.rs  tests.rs  types.rs
crates/alpha-state/: Cargo.toml
crates/alpha-state/src/: document.rs  kv.rs  lib.rs  migration.rs  tests.rs
