[package]
name = "alpha-aris"
version.workspace = true
edition.workspace = true

[dependencies]
alpha-common = { path = "../alpha-common" }
alpha-event-bus = { path = "../alpha-event-bus" }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
