[package]
name = "alpha-dialog"
version.workspace = true
edition.workspace = true

[dependencies]
alpha-common = { path = "../alpha-common" }
rusqlite = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
