[package]
name = "alpha-event-bus"
version.workspace = true
edition.workspace = true

[dependencies]
alpha-common = { path = "../alpha-common" }
rusqlite = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
