[package]
name = "alpha-memory"
version.workspace = true
edition.workspace = true

[dependencies]
alpha-common = { path = "../alpha-common" }
chrono = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
