[package]
name = "alpha-model-router"
version.workspace = true
edition.workspace = true

[dependencies]
alpha-common = { path = "../alpha-common" }
alpha-aris = { path = "../alpha-aris" }
alpha-event-bus = { path = "../alpha-event-bus" }
reqwest = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
